# stepmaniax-sdk

./: .gitignore  AGENTS.md
sdk-lite/: CHANGELOG.md  CMakeLists.txt  Helpers.cpp  Helpers.h  README.md  SMX.cpp  SMX.h  SMXConfigPacket.cpp  SMXConfigPacket.h  SMXDevice.cpp  SMXDevice.h  SMXDeviceConnection.cpp  SMXDeviceConnection.h  SMXDeviceSearch.cpp  SMXDeviceSearch.h  SMXManager.cpp  SMXManager.h  sample.cpp
